<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pirmas"
    tools:context="lt.hesora.hesora1.pagrindinis">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagedesc"
        android:cropToPadding="true"
        android:filterTouchesWhenObscured="true"
        android:fitsSystemWindows="true"
        android:scaleType="fitStart"
        android:src="@drawable/untitled1"
        android:visibility="visible" />

    <Button
        android:id="@+id/fotomygtukas"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="fotoLangas"
        android:text="@string/button_Foto" />

    <Button
        android:id="@+id/katalogomygtukas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:onClick="katalogoLangas"
        android:text="@string/button_katalogas" />

    <Button
        android:id="@+id/partneriumytgukas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="partneriuLangas"
        android:text="@string/button_partneriai" />

    <Button
        android:id="@+id/kontaktumygtukas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:onClick="kontaktuLangas"
        android:text="@string/button_kontaktai" />
</RelativeLayout>
